# graph-matching

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/edit_cost/: EditCost.h
include/graph_loader/: GraphLoader.h
include/linear_assignment/: NodeAssignment.h
res/: distances.npy  distances_enz.npy
res/ENZYMES/: embedding_0.npy  embedding_1.npy  embedding_10.npy  embedding_100.npy  embedding_101.npy  embedding_102.npy  embedding_103.npy  embedding_104.npy  embedding_105.npy  embedding_106.npy  embedding_107.npy  embedding_108.npy  embedding_109.npy  embedding_11.npy  embedding_110.npy  embedding_111.npy  embedding_112.npy  embedding_113.npy  embedding_114.npy  embedding_115.npy  embedding_116.npy  embedding_117.npy  embedding_118.npy  embedding_119.npy  embedding_12.npy  embedding_120.npy  embedding_121.npy  embedding_122.npy  embedding_123.npy  embedding_124.npy  embedding_125.npy  embedding_126.npy  embedding_127.npy  embedding_128.npy  embedding_129.npy  embedding_13.npy  embedding_130.npy  embedding_131.npy  embedding_132.npy  embedding_133.npy  (+560 more)
res/MUTAG/: distances.npy
res/embeddings/: embedding_0.npy  embedding_1.npy  embedding_10.npy  embedding_100.npy  embedding_101.npy  embedding_102.npy  embedding_103.npy  embedding_104.npy  embedding_105.npy  embedding_106.npy  embedding_107.npy  embedding_108.npy  embedding_109.npy  embedding_11.npy  embedding_110.npy  embedding_111.npy  embedding_112.npy  embedding_113.npy  embedding_115.npy  embedding_116.npy  embedding_117.npy  embedding_118.npy  embedding_119.npy  embedding_12.npy  embedding_120.npy  embedding_121.npy  embedding_122.npy  embedding_123.npy  embedding_124.npy  embedding_125.npy  embedding_126.npy  embedding_127.npy  embedding_128.npy  embedding_129.npy  embedding_13.npy  embedding_130.npy  embedding_131.npy  embedding_132.npy  embedding_134.npy  embedding_135.npy  (+143 more)
src/: main.cpp
src/edit_cost/: EditCost.cpp
src/graph_loader/: GraphLoader.cpp
src/linear_assignment/: NodeAssignment.cpp
tests/: node_assignment_test.cpp
